# cosmere-epub-parser

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  fly.toml  rust-toolchain.toml
assets/: index.html  styles.css
k6/: script.js
src/: books.rs  domain.rs  main.rs  main_controller.rs  metrics_wrapper.rs  search_index.rs
templates/: results.html
