[package]
name = "cosmere_search_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "~0.12.0"
axum = "~0.6.18"
axum-extra = { version = "~0.7.4", features = ["form"] }
serde = { version = "~1.0.171", features = ["derive"] }
serde_json = "~1.0.101"
tantivy = "~0.20.2"
tokio = { version = "~1.29.1", features = ["full"] }
tower-http = { version = "~0.4.1", features = ["fs", "set-header", "trace"] }
tracing = "~0.1.37"
tracing-subscriber = { version = "~0.3.17", features = ["std"] }

[profile.dev]
debug = true

[profile.release]
debug = true