[package]
name = "cosmere_search_web_server"
version = "0.1.5"
edition = "2021"

[dependencies]
askama = "0.12"
axum = "0.6"
axum-extra = { version = "0.7", features = ["form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.21"
tokio = { version = "1.32", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std"] }

[profile.dev]
debug = true

[profile.release]
debug = true