[package]
name = "cosmere_search_web_server"
version = "0.1.15"
edition = "2021"

[dependencies]
askama = "=0.12.1"
axum = "=0.7.5"
axum-extra = { version = "=0.9.3", features = ["form"] }
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.117"
tantivy = "=0.22.0"
tokio = { version = "=1.38.0", features = ["full"] }
tower-http = { version = "=0.5.2", features = ["fs", "set-header", "trace"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["std"] }

[profile.dev]
debug = true

[profile.release]
debug = true
